# coolapk-mcp

./: .gitignore  README.md  pyproject.toml
.claude/skills/: coolapk.md
coolapk_mcp/: boards.py  cli.py  client.py  config.py  models.py  server.py
coolapk_mcp/auth/: device.py  libauth.py  token.py  token_v3.py
